# qrule

./: CMakeLists.txt
src/: QmlVisitor.cpp  main.cpp  qruleengine.cpp
src/output/: xmloutputformatter.cpp
src/resources/: fil.qml  rule.kr  testSuite.txt
src/resources/validXmlOutput/: basic.xml  basic_2.xml
src/test/: CMakeLists.txt  main.cpp  testsuite.cpp  testsuite.h
